--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,17 @@
     <title>Stronk</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" href="favicon.svg" type="image/svg+xml" />
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker
+          .register('service-worker.js')
+          .then(function (registration) {})
+          .catch(function (err) {
+            console.log('ServiceWorker registration failed: ', err);
+          });
+      }
+    </script>
   </head>
   <body>
     <app-root></app-root>
